RESOLVED FIXED266154
[IFC][Ruby] Fix base range off-by-one errors
https://bugs.webkit.org/show_bug.cgi?id=266154
Summary [IFC][Ruby] Fix base range off-by-one errors
alan
Reported 2023-12-09 14:23:11 PST
ssia
Attachments
[fast-cq]Patch (4.17 KB, patch)
2023-12-09 14:49 PST, alan
no flags
alan
Comment 1 2023-12-09 14:49:47 PST
Created attachment 468956 [details] [fast-cq]Patch
EWS
Comment 2 2023-12-10 09:00:05 PST
Committed 271838@main (194305d2a708): <https://commits.webkit.org/271838@main> All reviewed patches have been landed. Closing bug and clearing flags on attachment 468956 [details].
Radar WebKit Bug Importer
Comment 3 2023-12-10 09:01:23 PST
Note You need to log in before you can comment on or make changes to this bug.