[IFC][Ruby] Fix base range off-by-one errors https://bugs.webkit.org/show_bug.cgi?id=266154

Reviewed by Antti Koivisto.

Range ends are always exclusive.

* Source/WebCore/layout/formattingContexts/inline/display/InlineDisplayContentBuilder.cpp:
(WebCore::Layout::InlineDisplayContentBuilder::applyRubyOverhang):
* Source/WebCore/layout/formattingContexts/inline/ruby/RubyFormattingContext.cpp:
(WebCore::Layout::RubyFormattingContext::applyRubyAlignOnBaseContent):
(WebCore::Layout::RubyFormattingContext::overhangForAnnotationAfter):

Canonical link: https://commits.webkit.org/271838@main